修改go环境配置

--- a/终端使用记录.md
+++ b/终端使用记录.md
@@ -37,3 +37,13 @@
 ### mysql操作
 
 重置mysql密码：set password for 用户名@localhost = password('新密码');
+
+
+
+go环境设置
+
+```bash
+export GO111MODULE=on
+export GOPROXY=https://goproxy.cn
+```
+
